# FlowUni

./: .gitignore  README.md  README.txt
projects/poolalloc/: CMakeLists.txt  Makefile  Makefile.common  config.status
projects/poolalloc/include/dsa/: DSGraph.h  DSNode.h  DataStructure.h
projects/poolalloc/include/flowuni/: BuFCP.h  FlowUni.h  LocalFCP.h  MemSSA.h
projects/poolalloc/include/poolalloc/Config/: config.h
projects/poolalloc/lib/: CMakeLists.txt  Makefile
projects/poolalloc/lib/AssistDS/: CMakeLists.txt  Makefile
projects/poolalloc/lib/DSA/: AddressTakenAnalysis.cpp  AllocatorIdentification.cpp  Basic.cpp  BottomUpClosure.cpp  CMakeLists.txt  CompleteBottomUp.cpp  DSGraph.cpp  DataStructure.cpp  DataStructureStats.cpp  EntryPointAnalysis.cpp  EquivClassGraphs.cpp  Local.cpp  Makefile  MemoryEffect.cpp  Printer.cpp  StdLibPass.cpp  TopDownClosure.cpp  TypeSafety.cpp
projects/poolalloc/lib/FlowUni/: BuFCP.cpp  FlowUni.cpp  LocalFCP.cpp  Makefile  MemSSA.cpp  assertion.cpp  dump.cpp
projects/poolalloc/runtime/PreRT/: CMakeLists.txt
projects/poolalloc/tools/: CMakeLists.txt  Makefile
projects/poolalloc/tools/WatchDog/: CMakeLists.txt
projects/poolalloc/tools/leakplug/: CMakeLists.txt  DataFlowAnalysis.cpp  DataFlowAnalysis.h  LeakPlug.h  Makefile  World.cpp  leakplug.cpp
projects/poolalloc/tools/leakplug/Debug+Asserts/: .dir  DataFlowAnalysis.d  World.d  leakplug.d
projects/poolalloc/tools/leakplug/tests/: FCPAnnotation.h  a.bc  a.c  a.fixed.bc  a.ll  argCaller.c  b.bc  b.c  bin  bu.c  build_lib  call.c  callgraph.c  canfix.bc  canfix.c  canfix.c.fixed.c  canfix.fixed.bc  canfix.ll  concat.c  concat.c.fixed.c  double_alloc.c  dsa_test.c  dsa_test.c.fixed.c  effect_test.c  effect_test.c.fixed.c  eq.GlobalsGraph.dot  eq.f.dot  eqtd.GlobalsGraph.dot  eqtd.f.dot  f4.c  global.c  heapmust.c  list  local.f.dot  mylist2  phi.c  ret.bc  ret.c  ret.c.fixed.c  ret.ll  (+9 more)
projects/poolalloc/tools/leakplug/tests/ammp-master/: 0guard.c  Drawwind.c  Makefile  README.md  abc.bc  abc.c.fixed.c  abc.ll  abuild.c  ammp.c  ammp.h  analyze.c  animate.c  anonbon.c  app.bc  (+48 more)
(+23 files in other folders)
